@@ -5604,13 +5604,18 @@ NS_CHECK_EXEC([server], [bfdd-control allow 172.16.1.1], [0], [dnl
 Allowing connections from 172.16.1.1
 ])
 
-ovn-nbctl create bfd logical_port=rp-public dst_ip=172.16.1.50 status=down min_tx=250 min_rx=250 detect_mult=10
+uuid=$(ovn-nbctl create bfd logical_port=rp-public dst_ip=172.16.1.50 status=down min_tx=250 min_rx=250 detect_mult=10)
 ovn-nbctl --wait=hv sync
 
 OVS_WAIT_UNTIL([test "$(ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2)}')" = "up"])
 AT_CHECK([ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2)}'], [0], [dnl
 up
 ])
+
+ovn-nbctl lr-route-add R1 100.0.0.0/8 172.16.1.50
+route_uuid=$(ovn-nbctl --bare --columns=_uuid find logical_router_static_route ip_prefix="100.0.0.0/8")
+ovn-nbctl set logical_router_static_route $route_uuid bfd=$uuid
+OVS_WAIT_UNTIL([ovn-sbctl dump-flows R1 | grep 'match=(ip4.dst == 100.0.0.0/8)' | grep -q 172.16.1.50])
 
 NS_CHECK_EXEC([server], [bfdd-control stop], [0], [dnl
 stopping
@@ -5620,6 +5625,8 @@ OVS_WAIT_UNTIL([test "$(ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2
 AT_CHECK([ovn-nbctl list bfd | awk -F: '/status/{print substr($2,2)}'], [0], [dnl
 down
 ])
+
+OVS_WAIT_UNTIL([test "$(ovn-sbctl dump-flows R1 | grep 'match=(ip4.dst == 100.0.0.0/8)' | grep 172.16.1.50)" = ""])
 
 kill $(pidof ovn-controller)
 
